Eclipse 2022-06: Sources and features to show; "work in progress" banner